# strands_demos

./: .gitignore  .gitmodules  README.md
a2a-agent-ui/: .gitignore  README.md  package-lock.json  package.json  start.sh
a2a-agent-ui/backend/: .gitignore  main.py  pyproject.toml
a2a-strands/: .gitignore  README.md  __main1__.py  __main2__.py  __main3__.py  a2a_client_agent.py  agent.py  agent_executor.py  amazon_bedrock_pricing.md  amazon_bedrock_pricing.txt  doc_agent.py  main_a2a_server.py  pyproject.toml  start_all.sh  stop_all.sh  test_client.py  utils_agent.py
awesome-skills-claude-agents/: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONFIGURATION.md  DEVELOPMENT_PLAN.md  FLOWCHARTS.md  MULTISELECT_COMPONENT.md  QUICK_START.md  README.md  SKILLS_GUIDE.md  init-aws.sh  restart.sh  sagemaker-hyperpod-expert.skill  start.sh  status.sh  stop.sh
awesome-skills-claude-agents/backend/: .env.example  README.md  config.py  main.py  pyproject.toml
awesome-skills-claude-agents/backend/core/: __init__.py  agent_manager.py  auth.py  exceptions.py  session_manager.py  skill_manager.py
awesome-skills-claude-agents/backend/database/: __init__.py  base.py  dynamodb.py  mock_db.py
awesome-skills-claude-agents/backend/middleware/: __init__.py  auth.py  error_handler.py  rate_limit.py
awesome-skills-claude-agents/backend/routers/: __init__.py  agents.py  auth.py  chat.py  mcp.py  skills.py
awesome-skills-claude-agents/backend/schemas/: __init__.py  agent.py  auth.py  error.py  mcp.py  message.py  skill.py
awesome-skills-claude-agents/backend/tests/: __init__.py  conftest.py  test_agents.py  test_chat.py  test_mcp.py  test_skills.py
awesome-skills-platform/: .coverage  .dockerignore  .env.example  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  Dockerfile  README.md  pyproject.toml  run_api.sh  test_agent_with_skills.py
awesome-skills-platform/cdk/: README.md  app.py  cdk.json
awesome-skills-platform/cdk/stacks/: __init__.py  backend_stack.py  frontend_stack.py
awesome-skills-platform/frontend/: .env.example  PROJECT_README.md  package-lock.json  package.json  vite.config.ts
awesome-skills-platform/frontend/src/: App.tsx  index.css  main.tsx
awesome-skills-platform/frontend/src/components/common/: Button.tsx  Layout.tsx  Sidebar.tsx
awesome-skills-platform/frontend/src/hooks/: useChat.test.ts  useChat.ts
awesome-skills-platform/frontend/src/lib/: api.ts
awesome-skills-platform/frontend/src/mocks/: data.ts
awesome-skills-platform/frontend/src/pages/: AddMCPServerPage.tsx  AgentsPage.tsx  ChatPage.old.tsx  ChatPage.tsx  CreateAgentPage.tsx  CreateSkillPage.tsx  MCPPage.tsx  SkillsPage.tsx  UploadSkillPage.tsx
awesome-skills-platform/frontend/src/services/: agents.test.ts  agents.ts  chat.ts  mcp.ts  skills.ts
awesome-skills-platform/frontend/src/types/: index.ts
awesome-skills-platform/scripts/: create_dynamodb_tables.py
awesome-skills-platform/src/: skill_tool.py  test_mcp_integration.py  test_memory_integration.py  test_streaming_chat.py
awesome-skills-platform/src/agentcore_runtime/: claude_agent_runtime.py  constant_helper.py  data_types.py  skill_tool.py  strands_runtime.py  streaming_utils.py  utils.py
awesome-skills-platform/src/api/: main.py
awesome-skills-platform/src/api/routers/: agents.py  chat.py  mcp.py  skills.py
awesome-skills-platform/src/core/: agent_manager.py  config.py  mcp_manager.py  memory_manager.py
awesome-skills-platform/src/database/: dynamodb.py
awesome-skills-platform/src/schemas/: agent.py  chat.py  mcp.py  skill.py
awesome-skills-platform/tests/: conftest.py
awesome-skills-platform/tests/integration/: test_api_agents.py  test_api_health.py  test_api_mcp.py  test_api_skills.py
awesome-skills-platform/tests/unit/: test_agent_manager.py  test_mcp_manager.py  test_memory_manager.py  test_skill_tool.py
awesome-skills-platform/ui_design/CreateAgent/: code.html
awesome-skills-platform/ui_design/agent定制管理/: code.html
awesome-skills-platform/ui_design/agent对话主界面/: code.html
skills-mcp-server/: .bedrock_agentcore.yaml  .cognito-s2.env  .env.example  .gitignore  README.md  README_EN.md  README_agentcore.md  cleanup-cognito-s2s.sh  pyproject.toml  quick_start_demo.py  setup_cognito_s2s.sh  test-s2s-token.sh  test_agentcore_mcp.py  test_new_mcp_client.py  test_server.py  utils.py
skills-mcp-server/.bedrock_agentcore/skills_mcp/: Dockerfile
skills-mcp-server/.bedrock_agentcore/skills_mcp3/: Dockerfile
skills-mcp-server/src/: pyproject.toml  server.py  server_agentcore.py
(+166 files in other folders)
