[project]
name = "agent-platform"
version = "0.1.0"
description = "AI Agent Platform with Strands Agents and AWS Bedrock AgentCore"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    # FastAPI and server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.12",
    # AWS SDK
    "boto3>=1.35.0",
    # Strands Agents SDK
    "strands-agents[anthropic]>=1.13.0",
    "strands-agents-tools>=0.2.12",
    # Data validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Other tools
    "python-pptx>=1.0.2",
    "psutil>=7.1.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",  # For FastAPI TestClient async support
    "respx>=0.21.0",  # For mocking httpx requests
    "moto[dynamodb]>=5.0.0",  # For mocking AWS services
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/agentcore_runtime/skills/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
